CHANGES
=======

1.6   2014-05-
----------------
* Issue 41 Changed keyring dependency into an extra.
* Issue 43 depend on setuptools>=0.7 instead of distribute (they have merged)

1.5   2013-08-03
----------------
* Issue 39 Support for hcs-utils>=1.3
* Issue 40 Removed bundled distribute_setup.py
* Dropping support for Python 2.6, only Python 2.7 is now supported
  If you can't upgrade to 2.7 stay with 1.4.

1.4   2012-11-10
----------------
* No longer necessary to configure goobook to be able to generate a configuration template...
* Fixed issue 28: No Protocol is set on GTalk IM
* Fixed issue 32: Encoding problem of unicode chars on non unicode terminal.
* Fixed issue 34: Unable to query due to keyring/DBus regression
* Fixed issue 35: passwordeval
* Fixed issue 36: When the contact has no title mutt will use the extra_str as the title.

1.4a5  never released
----------------
* Correctly decode encoded From headers, by Jonathan Ballet
* Fixed IM without protocol, Issue 26
* Fixed encoding issues on OS X, Issue 33
* passwordeval, get password from a command by Zhihao Yuan

1.4a4 2011-02-26
----------------

* Fixed bug in parsing postal addresses.
* Adjusted output format for postal addresses.

1.4a3 2011-02-26
----------------

* Added contacts are now added to "My Contacts", this fixes problem with
  searching now finding contacts you have added with goobook.
* Searches also matches on phonenumber (Patch by Marcus Nitzschke).
* Detailed, human readable, search results (Patch by Marcus Nitzschke).

1.4a2 2010-10-26
----------------

* When a query match a email-address, only show that address and not
  all the contacts addresses.
* Added option to filter contacts that are in no groups (default on).

1.4a1 2010-09-24
----------------

* Fixed mailing to groups
* Improved some error messages
* Isssue 20: Encoding on some Mac OS X
* Issue 21: Cache file never expires
* Support for auth via keyring


1.3 2010-07-17
--------------

No changes since 1.3rc1
