@@ -37,7 +37,11 @@ TEMPLATE = '''\
 ;cache_expiry_hours: 24
 ;filter_groupless_contacts: yes
 # New contacts will be added to this group in addition to "My Contacts"
-;default_group: 
+# Note that the group has to already exist on google or an error will occur.
+# One use for this is to add new contacts to an "Unsorted" group, which can
+# be sorted easier than all of "My Contacts".
+    searching for groupless users is a bit painful.
+;default_group:
 '''
 
 def read_config(config_file):
