@@ -5,6 +5,7 @@ CHANGES
 ----------------
 * Issue 41 Changed keyring dependency into an extra.
 * Issue 43 depend on setuptools>=0.7 instead of distribute (they have merged)
+* add support for default group by Samir Benmendil
 
 1.5   2013-08-03
 ----------------
